gitops/apps/base/traefik-routes/redpanda-console-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redpanda-console-routes
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`redpanda.k12n.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: redpanda-v2-console
          namespace: redpanda-v2
          port: 8080
